--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_credit_card: ^4.0.1
+  intl: ^0.20.1
   provider: ^6.1.2
 
 dev_dependencies:
