--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,10 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
+  cloud_firestore: ^5.6.1
   cupertino_icons: ^1.0.8
+  firebase_auth: ^5.4.0
+  firebase_core: ^3.10.0
   flutter:
     sdk: flutter
   flutter_credit_card: ^4.0.1
